k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: apps-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8989
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: customer-service
  type: ClusterIP
