k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: customer-service
  namespace: pipeline-demo
  labels:
    app.kubernetes.io/part-of: bank-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: customer-service
    weight: 100
  wildcardPolicy: None
